add onClick to set active color in state

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   height: 600px;
   border: 2px solid black;
   border-radius: 20px;
+  background-color: rgb(19, 15, 67);
 }
 
 .traffic-light-div {
